<resources>
    <string name="app_name">中视直播</string>
    <string name="actionsettings">Settings</string>
    <string name="returnbtn">返回</string>
    <string name="logout">注销</string>
    <string name="roomnotice">房间公告:</string>
    <string name="cameraliving">直播画质设置</string>
    <string name="livinghelper">直播助手</string>
    <string name="enterliving">进入直播</string>
    <string name="startliving">开始直播</string>
    <string name="maliu">码流</string>
    <string name="qingxidu">清晰度</string>
    <string name="zhenpin">帧频</string>
    <string name="remeberpwd">记住密码</string>
    <string name="login">登录</string>
    <string name="finishliving">结束直播</string>
    <string name="cotinueliving">继续直播</string>
    <string name="rankListTitle">本场直播排名</string>
    <string name="giftRank">礼物排行榜</string>
    <string name="queryBeans">乐豆查询</string>
    <string name="cancle">取消</string>
    <string name="sure">确定</string>
    <string name="showlogoutinfo">确认注销登录？</string>
    <string name="checkdifinition">选择清晰度</string>
    <string name="fluent">流畅</string>
    <string name="highdifinition">高清（推荐）</string>
    <string name="normal">普通</string>
    <string name="querybeantitle">乐豆查询</string>
    <string name="beannum">剩余乐豆数额：</string>
    <string name="giftsort">礼物排名</string>
    <string name="giftsortinof">查看礼物与观众排名</string>
    <string name="beansquery">乐豆查询</string>
    <string name="beansqueryinfo">查看剩余乐豆数</string>
    <string name="beansguize">乐豆规则\n乐豆与RMB兑换比例为1万乐豆=1RMB</string>
</resources>