<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/white_coner"
        android:gravity="center"
        android:minHeight="150dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showlogoutinfo"
                android:textColor="@color/blackwords"
                android:textSize="15sp" />

        </LinearLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/listViewFgx"/>
        <LinearLayout
            android:id="@+id/show_info_bottom_btns"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancle_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/cancle"
                android:textColor="@color/settingbtnfgx"
                android:textSize="15dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="25dp"
                android:background="@color/listViewFgx" />

            <Button
                android:id="@+id/suer_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/sure"
                android:textColor="@color/blackwords"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>