<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black50"
    android:gravity="right"
    android:orientation="horizontal"
    android:weightSum="5"
    android:id="@+id/linear_beans"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/white"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:padding="10dp"
                android:src="@mipmap/close" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/querybeantitle"
                android:textColor="@color/blackwords"
                android:textSize="20sp" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:background="@color/grayfgx"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/beannum"
                android:textColor="@color/blackwords"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/beans_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="123456"
                android:textColor="@color/redwords"
                android:textSize="27sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@mipmap/quertbeans" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="17dp"
                android:text="@string/beansguize"
                android:textColor="@color/settingbtnfgx"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>